# eno-os

./: CMakeLists.txt  CMakePresets.json  Cargo.toml  README.md  diagram.json  prj.conf  sysbuild.cmake  west.yml  wokwi.toml
.devcontainer/: Dockerfile  devcontainer.json
boards/Gensis/meko_v2/: Kconfig.defconfig  Kconfig.meko_v2  board.cmake  board.yml  meko_v2-pinctrl.dtsi  meko_v2_common.dtsi  meko_v2_nrf5340_cpuapp.dts  meko_v2_nrf5340_cpuapp.yaml  meko_v2_nrf5340_cpuapp_defconfig  meko_v2_nrf5340_cpuapp_ns.dts  meko_v2_nrf5340_cpuapp_ns.yaml  meko_v2_nrf5340_cpuapp_ns_defconfig  meko_v2_nrf5340_cpunet.dts  meko_v2_nrf5340_cpunet.yaml  meko_v2_nrf5340_cpunet_defconfig
lib/: i2c_dac.c  i2c_dac_adresses.h  sd_card.c  sd_card.h
src/: audio.c  audio.h  audio_snippet.h  audio_without_driver.c  audio_without_driver.h  buttons.c  buttons.h  encoder.c  main.c  main.h  main.rs  motor.c  npm1300_led.c  screen.c  sd.c  songs.c  songs.h  ui.c  ui.h
ui_project/: CMakeLists.txt  file_list_gen.cmake  globals.xml  project.xml  ui_hello_world_gen.c  ui_hello_world_gen.h  ui_project.c  ui_project.h  ui_project_gen.c  ui_project_gen.h
ui_project/preview-bin/: lved-runtime.js
ui_project/screens/: lol.xml  lol_gen.c  lol_gen.h
