[package]
name = "eno-os"
version = "0.1.0"
authors = ["Balázs Marcell <KoegLike@proton.me>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "eno-os"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"

embassy-executor = { version = "0.7", features = ["executor-thread", "arch-std",] }

slint = { git = "https://github.com/slint-ui/slint", default-features = false, features = ["libm","renderer-software","unsafe-single-threaded","compat-1-2"] }
# --- Temporary workaround for embassy-executor < 0.8 ---
 esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync"] }
 critical-section = { version = "1.1", features = ["std"], default-features = false }

[build-dependencies]
embuild = "0.33"
# slint-build = "1.12.1"